--- a/backend/ui/templates/general_list.html
+++ b/backend/ui/templates/general_list.html
@@ -1,91 +1,96 @@
 {% import 'common.tpl' as c %}
 <html lang="ja">
-
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>マスタメンテナンス（汎用マスタ）一覧</title>
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
-    <style>
-        .abbreviate_text {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            width: 500px;
-        }
-    </style>
-
 </head>
 
-<body class="">
-    <form method="get" id="form_list" action="" class="">
-        <div class="sticky-top bg-white">
-            {{ c.common_header(login_user, mode | default("")) }}
-            <div class="w-100 px-4">
-                <!-- メッセージ表示領域 -->
-                <div class="" id="div_message_area">
-                    {% if result=="error" %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        {{sys_msg}}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                    {% endif %}
+<body>
+<div class="d-flex">
+    <!-- サイドバー -->
+    {{ c.common_sidebar(login_user, mode | default("")) }}
 
+    <!-- メインコンテンツ -->
+    <div class="flex-grow-1 p-4">
+        <form method="get" id="form_list" action="">
+            <!-- メッセージ表示領域 -->
+            <div id="div_message_area">
+                {% if result=="error" %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{sys_msg}}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-                <div class="mt-3 mb-2 bg-white border-bottom border-dark row">
-                    <div class="col-auto">
-                        <h3>マスタメンテナンス（汎用マスタ） 一覧</h3>
-                    </div>
-                    <div class="col text-end">
-                        <a class="btn btn-primary btn-sm mb-2 px-4" href="/general/new" role="button"><i
-                                class="bi bi-pencil-square"></i> 新規登録</a>
-                    </div>
+                {% endif %}
+            </div>
+
+            <!-- タイトルと新規登録ボタン -->
+            <div class="m-3 bg-white border-bottom border-dark row">
+                <div class="col-auto">
+                    <h3>マスタメンテナンス（汎用マスタ） 一覧</h3>
+                </div>
+                {% if login_user.authority_code == 99 %}
+                <div class="col text-end">
+                    <a class="btn btn-primary btn-sm mb-2 px-4" href="/general/new" role="button">
+                        <i class="bi bi-pencil-square"></i> 新規登録
+                    </a>
+                </div>
+                {% endif %}
+            </div>
+
+
+            <!-- 検索条件 -->
+            <div class="row align-items-end m-3">
+                <div class="form-group col">
+                    <label for="sel_category">カテゴリ</label>
+                    <select name="sel_category" id="sel_category" class="form-select filter-input-control">
+                        <option value="" {% if sel_category=="" %} selected {% endif %}></option>
+                        {% for category in category_list %}
+                        <option value="{{category.category}}" {% if sel_category==category.category %} selected {% endif %}>
+                            {{category.display_name}}
+                        </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group col">
+                    <label for="txt_code_value">名称</label>
+                    <input type="search" class="form-control form-control-sm filter-input-control"
+                        name="txt_code_value" id="txt_code_value" value="{{txt_code_value}}">
+                </div>
+                <div class="form-group col">
+                    <button type="button" class="btn btn-primary btn-sm" onclick="get_search_list(1)">
+                        <i class="bi bi-search"></i> 検 索
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm" onclick="clear_onclick()">
+                        <i class="bi bi-x-circle"></i> クリア
+                    </button>
+                </div>
+                <div class="form-group text-end col">
+                    <button type="button" class="btn btn-outline-success btn-sm" onclick="download_onclick()">
+                        <i class="bi bi-download"></i> ダウンロード
+                    </button>
                 </div>
             </div>
-            <!-- 操作領域 -->
-            <div class="mt-3 px-4">
-                <div class="row mt-3 align-items-end">
-                    <div class="form-group col">
-                        <label for="sel_category">カテゴリ</label>
-                        <select name="sel_category" id="sel_category" class="form-select filter-input-control">
-                            <option value="" {% if sel_category=="" %} selected {% endif %}></option>
-                            {% for category in category_list %}
-                            <option value="{{category.category}}" {% if sel_category==category.category %} selected {%
-                                endif %}>
-                                {{category.display_name}}
-                            </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group col">
-                        <label for="txt_code_value">名称</label>
-                        <input type="search" class="form-control form-control-sm filter-input-control"
-                            name="txt_code_value" id="txt_code_value" value="{{txt_code_value}}">
-                    </div>
-                    <div class="form-group col">
-                        <button type="button" class="btn btn-primary btn-sm" onclick="get_search_list(1)">
-                            <i class="bi bi-search"></i> 検 索
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm" onclick="clear_onclick()">
-                            <i class="bi bi-x-circle"></i> クリア
-                        </button>
-                    </div>
 
-                    <div class="form-group text-end col">
-                        <button type="button" class="btn btn-outline-success btn-sm" onclick="download_onclick()">
-                            <i class="bi bi-download"></i> ダウンロード</button>
-                    </div>
-                </div>
-            </div>
             <!-- ページング -->
-            <div class="w-100 d-flex flex-row-reverse mt-3 px-4">
+            <div class="d-flex justify-content-end align-items-center m-3 pe-2">
+                <div class="me-3">
+                    検索結果：<span class="fw-bold">{{'{:,}'.format(rec_count)}}</span> 件
+                </div>
+                <div class="me-2">
+                    <select class="form-select form-select-sm" style="width:90px;" name="sel_row_max" id="sel_row_max"
+                        onchange="get_search_list(1)">
+                        {% for cnt in row_max_list %}
+                        <option value="{{cnt}}" {% if sel_row_max==cnt %} selected {% endif %}>{{cnt}}件</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <nav aria-label="Page navigation">
-                    <ul class="pagination pagination-sm">
+                    <ul class="pagination pagination-sm mb-0">
                         <li class="page-item {% if hdn_page_no == 1 %} disabled {% endif %}">
                             <a class="page-link" onclick="get_search_list(Number('{{hdn_page_no - 1}}'))">Previous</a>
                         </li>
@@ -99,79 +104,65 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="me-2">
-                    <select class="form-select form-select-sm" style="width:90px;" name="sel_row_max" id="sel_row_max"
-                        onchange="get_search_list(1)">
-                        {% for cnt in row_max_list %}
-                        <option value="{{cnt}}" {% if sel_row_max==cnt %} selected {% endif %}>{{cnt}}件</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="me-3 pt-1">
-                    検索結果：<span class="fw-bold">{{'{:,}'.format(rec_count)}}</span> 件
-                </div>
             </div>
-        </div>
-        <div class="w-100 px-4">
+
             <!-- 検索結果一覧 -->
-            <div class="">
+            <div class="table-responsive m-3 ps-3 pe-2">
                 <table class="table table-bordered table-hover table-sm">
                     <thead class="table-secondary">
                         <tr>
-                            <th scope="col" class="text-nowrap p-2">編集</th>
-                            <th scope="col" class="text-nowrap p-2">カテゴリ</th>
-                            <th scope="col" class="text-nowrap p-2">コード</th>
-                            <th scope="col" class="text-nowrap p-2">名称</th>
-                            <th scope="col" class="text-nowrap p-2">備考</th>
-                            <th scope="col" class="text-nowrap p-2">ソートキー</th>
-                            <th scope="col" class="text-nowrap p-2">最終更新日</th>
-                            <th scope="col" class="text-nowrap p-2">削除フラグ</th>
+                            <th class="text-nowrap p-2">編集</th>
+                            <th class="text-nowrap p-2">カテゴリ</th>
+                            <th class="text-nowrap p-2">コード</th>
+                            <th class="text-nowrap p-2">名称</th>
+                            <th class="text-nowrap p-2">備考</th>
+                            <th class="text-nowrap p-2">ソートキー</th>
+                            <th class="text-nowrap p-2">最終更新日</th>
+                            <th class="text-nowrap p-2">削除フラグ</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider">
                         {% for general in general_list %}
                         <tr class="{% if general.del_flag == True %}table-secondary{% endif %}">
-
                             <td class="text-center align-middle text-nowrap p-1">
                                 <a href="/general/{{general.category}}/{{general.code}}/edit" role="button"
-                                    class="btn btn-outline-primary btn-sm link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                                    class="btn btn-outline-primary btn-sm">
                                     <i class="bi bi-pencil-square"></i>
                                 </a>
                             </td>
-                            <td class="p-1 align-middle multi-line">{{general.r_category.display_name}}</td>
-                            <td class="p-1 align-middle multi-line">{{general.code}}</td>
-                            <th scope="row" class="text-nowrap p-1 align-middle"><a
-                                    href="/general/{{general.category}}/{{general.code}}/disp"
-                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{general.code_value}}</a>
+                            <td class="p-1 align-middle">{{general.r_category.display_name}}</td>
+                            <td class="p-1 align-middle">{{general.code}}</td>
+                            <th scope="row" class="text-nowrap p-1 align-middle">
+                                <a href="/general/{{general.category}}/{{general.code}}/disp"
+                                    class="link-primary">{{general.code_value}}</a>
                             </th>
-                            {% if general.remarks is not none %}
                             <td class="p-1 align-middle">
+                                {% if general.remarks is not none %}
                                 <div class="abbreviate_text">{{general.remarks}}</div>
+                                {% endif %}
                             </td>
-                            {% else %}
-                            <td class="p-1 align-middle"></td>
-                            {% endif %}
-                            <td class="p-1 align-middle multi-line">{{general.sort_key}}</td>
-                            {% if general.update_date is not none %}
-                            <td class="p-1 align-middle">{{general.update_date.strftime('%Y-%m-%d')}}</td>
-                            {% else %}
-                            <td class="p- 1align-middle"></td>
-                            {% endif %}
+                            <td class="p-1 align-middle">{{general.sort_key}}</td>
+                            <td class="p-1 align-middle">
+                                {% if general.update_date is not none %}
+                                {{general.update_date.strftime('%Y-%m-%d')}}
+                                {% endif %}
+                            </td>
                             <td class="text-center">{% if general.del_flag == True %}○{% endif %}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
-        </div>
-        <!-- Topへ戻るボタン -->
-        <button id="scrollToTopBtn" class="btn" type="button"><i class="bi bi-arrow-up"></i></button>
-        <!-- 現在のページ番号 -->
-        <input type="hidden" class="form-control" value="{{hdn_page_no}}" id="hdn_page_no" name="hdn_page_no">
-    </form>
-    
-    <script src=" /static/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/common.js"></script>
-    <script src="/static/js/general_list.js"></script>
 
+            <!-- Topへ戻るボタン -->
+            <button id="scrollToTopBtn" class="btn" type="button"><i class="bi bi-arrow-up"></i></button>
+            <input type="hidden" value="{{hdn_page_no}}" id="hdn_page_no" name="hdn_page_no">
+        </form>
+    </div>
+</div>
+
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/common.js"></script>
+<script src="/static/js/general_list.js"></script>
 </body>
+</html>
