--- a/backend/ui/templates/room_list.html
+++ b/backend/ui/templates/room_list.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>ユーザ一覧</title>
+    <title>ルーム一覧</title>
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -35,11 +35,11 @@
             <!-- タイトルと新規登録ボタン -->
             <div class="m-3 bg-white border-bottom border-dark row">
                 <div class="col-auto">
-                    <h3>ユーザ一覧</h3>
+                    <h3>ルーム一覧</h3>
                 </div>
                 {% if login_user.authority_code == 99 %}
                 <div class="col text-end">
-                    <a class="btn btn-primary btn-sm mb-2 px-4" href="/user/new" role="button">
+                    <a class="btn btn-primary btn-sm mb-2 px-4" href="/room/new" role="button">
                         <i class="bi bi-pencil-square"></i> 新規登録
                     </a>
                 </div>
@@ -49,14 +49,9 @@
             <!-- 検索条件 -->
             <div class="row m-3 align-items-end">
                 <div class="form-group col">
-                    <label for="txt_mail_address">メールアドレス（部分一致）</label>
-                    <input type="search" class="form-control form-control-sm" name="txt_mail_address"
-                        id="txt_mail_address" value="{{txt_mail_address}}">
-                </div>
-                <div class="form-group col">
-                    <label for="txt_user_name">ユーザ名（部分一致）</label>
-                    <input type="search" class="form-control form-control-sm" name="txt_user_name"
-                        id="txt_user_name" value="{{txt_user_name}}">
+                    <label for="txt_room_name">ルーム名（部分一致）</label>
+                    <input type="search" class="form-control form-control-sm" name="txt_room_name"
+                        id="txt_room_name" value="{{txt_room_name}}">
                 </div>
                 <div class="form-group col">
                     <button type="button" class="btn btn-primary btn-sm" onclick="get_search_list(1)">
@@ -64,11 +59,6 @@
                     </button>
                     <button type="button" class="btn btn-outline-secondary btn-sm" onclick="clear_onclick()">
                         <i class="bi bi-x-circle"></i> クリア
-                    </button>
-                </div>
-                <div class="form-group text-end col">
-                    <button type="button" class="btn btn-outline-success btn-sm" onclick="download_onclick()">
-                        <i class="bi bi-download"></i> ダウンロード
                     </button>
                 </div>
             </div>
@@ -108,36 +98,27 @@
                     <thead class="table-secondary">
                         <tr>
                             <th scope="col" class="text-nowrap p-2">編集</th>
-                            <th scope="col" class="text-nowrap p-2">メールアドレス</th>
-                            <th scope="col" class="text-nowrap p-2">ユーザ名</th>
-                            <th scope="col" class="text-nowrap p-2">権限</th>
+                            <th scope="col" class="text-nowrap p-2">ルーム名</th>
+                            <th scope="col" class="text-nowrap p-2">備考</th>
                             <th scope="col" class="text-nowrap p-2">最終更新日</th>
-                            <th scope="col" class="text-nowrap p-2">削除フラグ</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider">
                         {% for user in user_list %}
-                        <tr class="{% if user.del_flag == True %}table-secondary{% endif %}">
+                        <tr class="">
                             <td class="text-center align-middle text-nowrap p-1">
-                                <a href="/user/{{user.id}}/edit" role="button"
+                                <a href="/room/{{room.id}}/edit" role="button"
                                     class="btn btn-outline-primary btn-sm link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
                                     <i class="bi bi-pencil-square"></i>
                                 </a>
                             </td>
-                            <th scope="row" class="text-nowrap p-1 align-middle">
-                                <a href="/user/{{user.id}}/disp"
-                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
-                                    {{user.mail_address}}
-                                </a>
-                            </th>
-                            <td class="p-1 align-middle multi-line">{{user.user_name or ''}}</td>
-                            <td class="p-1 align-middle multi-line">{{user.authority[0].code_value or ''}}</td>
+                            <td class="p-1 align-middle multi-line">{{room.room_name or ''}}</td>
+                            <td class="p-1 align-middle multi-line">{{room.remarks or ''}}</td>
                             {% if user.update_date is not none %}
-                            <td class="p-1 align-middle">{{user.update_date.strftime('%Y-%m-%d')}}</td>
+                            <td class="p-1 align-middle">{{room.update_date.strftime('%Y-%m-%d')}}</td>
                             {% else %}
                             <td class="p-1 align-middle"></td>
                             {% endif %}
-                            <td class="text-center">{% if user.del_flag == True %}○{% endif %}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -155,7 +136,7 @@
 
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 <script src="/static/js/common.js"></script>
-<script src="/static/js/user_list.js"></script>
+<script src="/static/js/room_list.js"></script>
 
 </body>
 </html>
