--- a/backend/ui/templates/general_list.html
+++ b/backend/ui/templates/general_list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>マスタメンテナンス（汎用マスタ）一覧</title>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 <body>
 <div class="d-flex">
     <!-- サイドバー -->
-    {{ c.common_sidebar(login_user, mode | default("")) }}
+    {{ c.common_sidebar(login_user | default("")) }}
 
     <!-- メインコンテンツ -->
     <div class="flex-grow-1 p-4">
@@ -161,7 +161,7 @@
     </div>
 </div>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="/static/js/common.js"></script>
 <script src="/static/js/general_list.js"></script>
 </body>
