--- a/backend/ui/templates/init.html
+++ b/backend/ui/templates/init.html
@@ -8,7 +8,7 @@
 
     <title>DB初期化</title>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
@@ -25,7 +25,7 @@
         </div>
         </div>
     </form>
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="/static/js/common.js"></script>
     <script>
         function run_onclick() {
