--- a/backend/ui/templates/system_info.html
+++ b/backend/ui/templates/system_info.html
@@ -8,7 +8,7 @@
 
     <title>{{title}}</title>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
@@ -31,7 +31,7 @@
     <!-- Topへ戻るボタン -->
     <button id="scrollToTopBtn" class="btn" type="button"><i class="bi bi-arrow-up"></i></button>
 
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="/static/js/common.js"></script>
     <script src="/static/js/system_info.js"></script>
 </body>
