--- a/backend/ui/templates/user_form.html
+++ b/backend/ui/templates/user_form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ユーザ情報</title>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
 <body>
 <div class="d-flex">
     <!-- サイドバー -->
-    {{ c.common_sidebar(login_user, mode | default("")) }}
+    {{ c.common_sidebar(login_user | default("")) }}
 
     <!-- メインコンテンツ -->
     <div class="flex-grow-1 p-3">
@@ -186,7 +186,7 @@
     </div>
 </div>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="/static/js/common.js"></script>
 <script src="/static/js/user_form.js"></script>
 
