--- a/backend/ui/templates/user_list.html
+++ b/backend/ui/templates/user_list.html
@@ -7,7 +7,7 @@
 
     <title>ユーザ一覧</title>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/icon/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
@@ -16,7 +16,7 @@
 <body>
 <div class="d-flex">
     <!-- サイドバー -->
-    {{ c.common_sidebar(login_user, mode | default("")) }}
+    {{ c.common_sidebar(login_user | default("")) }}
 
     <!-- メインコンテンツ -->
     <div class="flex-grow-1 p-4">
@@ -153,7 +153,7 @@
     </div>
 </div>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="/static/js/common.js"></script>
 <script src="/static/js/user_list.js"></script>
 
